# msolve

./: .gitattributes  .travis.yml  Cargo.toml  README.md  build.rs  generate.sh
bench_sudokus/: forum_hardest_1905  gen_puzzles  hardest_to_solve  hardest_to_verify  kaggle.txt  most_difficult  serg_benchmark  sudoku17  top2365
benches/: benchmarks.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: consts.rs  gen.rs  lib.rs  main.rs  solution_iterator.rs  structures.rs  techniques.rs
tests/: tests.rs
