[package]
name = "msolve"
description = "Another sudoku solving library"
version = "0.2.4"
authors = ["Alex Williams <mkb2191@protonmail.com>"]
edition = "2018"
include = ["src/lib.rs", "build.rs", "README.md", "benches/benchmarks.rs"]
repository = "https://github.com/mkb2091/msolve/"
license = "MIT"
readme = "README.md"
build = "build.rs"


[dependencies]
smallvec = {version = "1.4.0", optional = true}

[dev-dependencies]
criterion = "0.3"
quickcheck = {version = "0.9", default-features = false}
quickcheck_macros = "0.9"
sudoku = { version = "0.7", features = ["unchecked_indexing"]}
rand = "0.7"

[features]
default = ["smallvec"]


[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true

[profile.dev]
opt-level = 3
debug-assertions = true
