[package]
name = "msolve"
description = "Another sudoku solving library"
version = "0.6.0"
authors = ["Alex Williams <mkb2191@protonmail.com>"]
edition = "2018"
include = ["src/*.rs", "README.md", "benches/benchmarks.rs"]
repository = "https://github.com/mkb2091/msolve/"
license = "MIT"
readme = "README.md"

[dependencies]
smallvec = {version = "1.4.0", optional = true}
rand = {version = "0.7", optional = true}
rand_core = {version = "0.5", optional = true}
clap = {version = "3.0.0-beta.1", optional = true, default-features = false, features = ["std", "derive", "suggestions"]}


[dev-dependencies]
criterion = "0.3"
quickcheck = {version = "0.9", default-features = false}
quickcheck_macros = "1.0"
sudoku = { version = "0.7", features = ["unchecked_indexing"]}
rand = "0.7"

[features]
default = ["smallvec", "cli", "generate", "std"]
cli = ["clap"]
generate = ["rand", "rand_core"]
std = ["alloc"]
alloc = []


[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
panic = "abort"

[profile.dev]
opt-level = 3
debug-assertions = true
